troubleshooting the db issues with the tests

--- a/spec/database.yml
+++ b/spec/database.yml
@@ -4,7 +4,9 @@ sqlite3:
 
 mysql2:
   adapter: mysql2
-  hostname: localhost
-  username: root
-  password: bobo
+  hostname: victors-stage.cr8guujt7srm.us-east-1.rds.amazonaws.com
+  username: victors
+  password: kraftwerk77
   database: digest_mailer_test
+  pool: 5
+  port: 3306
